Fix issue building on Java 16 and later
Codox needs some packages opened until they can get some of their own
dependencies updated or replaced.

This commit also updates to the latest Clojure and versions of various
dependencies.